[gd_scene load_steps=4 format=3 uid="uid://fywarditliwi"]

[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="1_font"]
[ext_resource type="Script" uid="uid://2kukwhf1e7af" path="res://scripts/game_mode_menu.gd" id="2_script"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("1_font")
font_size = 48

[node name="GameModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MATCH 3 GAME"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="MovesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "MODO MOVIMIENTOS
(30 movimientos)"

[node name="TimeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "MODO TIEMPO
(60 segundos)"
